# mp2-lab4-claster

./: CMakeLists.txt  README.md  mp2-lab4-claster.sln
ClasterTest/: CMakeLists.txt  ClasterTest.vcxproj  test_TPQueue.cpp  test_claster.cpp  test_queue.cpp
Sample-Test1/: Sample-Test1.vcxproj  Source.cpp  test.cpp
base/: base.sln
base/base/: Cluster.h  base.cpp  base.vcxproj  base.vcxproj.filters  main_sample.cpp  queue.h  text.txt
base/base_test/: Test_Claster.cpp  Test_TPQueue.cpp  Test_queue.cpp  base_test.vcxproj  base_test.vcxproj.filters
mp2-lab4-claster/: CMakeLists.txt  Cluster.cpp  Cluster.h  Header.h  Task.cpp  Task.h  Tlist.h  main_sample.cpp  mp2-lab4-claster.cpp  mp2-lab4-claster.vcxproj  mp2-lab4-claster.vcxproj.filters  queue.cpp  queue.h  resource.h  text.txt
